# meego-ux-mediafs

./: CMakeLists.txt  gstreamer.c  imagemagick.c  indexer.c  indexer.h  install-sh  main.c  media-preprocessor  media-preprocessor.spec  meego-ux-mediafs  meego-ux-mediafs.spec  mfuse.c  mfuse.h  plugin.h  test.sh  thumbnail.c  thumbnail.h
cmake_modules/: FindGLIB2.cmake  FindGStreamer.cmake  FindImageMagick.cmake  Findfuse.cmake  Findmagic.cmake
